--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -19,3 +19,10 @@ jobs:
           command: validate
           arguments: -syntax-only
           target: pjsonJ.json
+          
+      # BUILD templates
+      - name: BUILD PACKER Template
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: build          
+          target: pjsonJ.json
