--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     name: packer
     environment:
-            name: pdn
+            name: qa
 
     steps:
       - name: Checkout Repository
