--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -7,20 +7,31 @@ jobs:
   packer:
     runs-on: ubuntu-latest
     name: packer
-    environment:
-            name: qa
+
+
+    #environment:
+    #        name: qa
 
     steps:
+      -name: SET ENV to staging
+      if: endsWith(github.ref,'/develop')
+        run : |
+        echo "::set-env name=ENVIRONMENT::qa"
+      -name: SET ENV to production
+      if: endsWith(github.ref,'/main')
+        run : |
+        echo "::set-env name=ENVIRONMENT::pdn"
+
       - name: Checkout Repository
         uses: actions/checkout@v2
-        
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-          
+
 
       # validate templates
       - name: Validate Template
