--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -14,17 +14,15 @@ jobs:
 
     steps:
       - name: SET ENV to staging
-        uses: cypress-io/github-action@v2
         if: endsWith(github.ref,'/develop')
         run : |
-         echo "::set-env name=ENVIRONMENT::qa"
-         #export ENVIRONMENT="qa"
+         #echo "::set-env name=ENVIRONMENT::qa"
+         export ENVIRONMENT="qa"
       - name: SET ENV to production
-        uses: cypress-io/github-action@v2
         if: endsWith(github.ref,'/main')
         run : |
-         echo "::set-env name=ENVIRONMENT::pdn"
-         #export ENVIRONMENT="pdn"
+         #echo "::set-env name=ENVIRONMENT::pdn"
+         export ENVIRONMENT="pdn"
 
       - name: Checkout Repository
         uses: actions/checkout@v2
