--- a/.github/workflows/packer_PDN.yml
+++ b/.github/workflows/packer_PDN.yml
@@ -1,10 +1,9 @@
 name: Packer
 
 on:
-  # push:
-  #   branches: [ main ]
-  pull_request:
-    branches: [ main ]
+   push:
+     branches: [ main ]
+
 
 
 jobs:
