--- a/.github/workflows/packer_STAGIN.yml
+++ b/.github/workflows/packer_STAGIN.yml
@@ -3,9 +3,9 @@ name: Packer_stagin
 on:
   push:
       branches: [ develop ]
-  paths:
-    - 'packer/**'
-    - '.github/workflows/packer_STAGIN.yml'
+  # paths:
+  #   - 'packer/**'
+  #   - '.github/workflows/packer_STAGIN.yml'
 
 jobs:
   packer:
